--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <!-- annotation -->
         <div id="finding" class="hidden">
-            <p>Pedestrian counts during weekdays fluctuate at peak hours, whereas counts during weekends grow and shrink steadily throughout the day. Weekday peaks correspond to work starting hours, lunch time and work ending hours, at 8, 12-13 and 17. On weekends, this pattern is replaced by a soft pedestrian increase and decrease troughout the day.</p>
+            <p>Pedestrian counts during weekdays fluctuate at peak hours, whereas counts during weekends grow and shrink steadily throughout the day. Weekday peaks correspond to work starting hours, lunch time and work ending hours, at 8, 12-13 and 17, respectively.</p>
         </div>
         
         <script src="https://d3js.org/d3.v4.min.js"></script>
